project/log/20250929_144739.log
Hello DirectX!

clientSize:1280,720

Use Adapater: NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel: 12.2 

Complete create D3D12Device!!!!

Begin CompileShader, path:object3D.VS.hlsl, profile:vs_6_0

object3D.VS.hlsl:27:19: error: expected '}'
    return output;
                  ^
object3D.VS.hlsl:21:1: note: to match this '{'
{
^

Compile Succeded, path:object3D.VS.hlsl, profile:vs_6_0

Begin CompileShader, path:object3D.PS.hlsl, profile:ps_6_0

Compile Succeded, path:object3D.PS.hlsl, profile:ps_6_0

